--- a/index.html
+++ b/index.html
@@ -1,28 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-57BJVQ0LR5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-57BJVQ0LR5');
-</script>
+  <!-- Google Tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-57BJVQ0LR5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-57BJVQ0LR5');
+  </script>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HarmonySync - Home</title>
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
-  <style>
-    /* Ensure the index page is non-scrollable */
-    body {
-      overflow: hidden;
-    }
-  </style>
 </head>
 <body>
   <!-- Full Screen Video Background -->
@@ -38,14 +31,13 @@
         <h1>HarmonySync</h1>
       </div>
       <nav>
-        <ul class="nav-links d-flex list-unstyled mb-0">
-          <li class="mx-2"><a href="index.html" class="active">Home</a></li>
-          <li class="mx-2"><a href="features.html">Features</a></li>
-          <li class="mx-2"><a href="pricing.html">Plans</a></li>
-          <li class="mx-2"><a href="about.html">About</a></li>
-          <li class="mx-2"><a href="contact.html">Contact</a></li>
-          <!-- Subscribe Button -->
-          <li class="mx-2"><a href="https://forms.gle/zbcgu3hpRKMYy6oPA" target="_blank" class="subscribe-btn">Subscribe</a></li>
+        <ul class="nav-links">
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="features.html">Features</a></li>
+          <li><a href="pricing.html">Plans</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="https://forms.gle/zbcgu3hpRKMYy6oPA" target="_blank" class="subscribe-btn">Subscribe</a></li>
         </ul>
         <div class="menu-toggle">
           <span></span>
@@ -72,10 +64,14 @@
     </div>
   </footer>
 
-  <!-- Bootstrap JS (Optional) -->
+  <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Optional custom script -->
-  <script src="script.js"></script>
+  <!-- Mobile Menu Toggle Script -->
+  <script>
+    document.querySelector('.menu-toggle').addEventListener('click', function() {
+      document.querySelector('.nav-links').classList.toggle('active');
+    });
+  </script>
 </body>
 </html>
