--- a/features.html
+++ b/features.html
@@ -105,8 +105,8 @@
     </div>
   </section>
 
-  <!-- Full-Width Footer -->
-  <footer class="full-footer">
+  <!-- Footer for Inner Pages -->
+  <footer class="inner-footer">
     <div class="container text-center py-4">
       <p>&copy; 2025 HarmonySync. All rights reserved.</p>
     </div>
