--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
   </section>
 
-  <!-- Full-Width Footer (Fixed at Bottom) -->
+  <!-- Full-Width Footer (Fixed at Bottom for Home) -->
   <footer class="full-footer">
     <div class="container text-center py-4">
       <p>&copy; 2025 HarmonySync. All rights reserved.</p>
